5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4476/executions/1593_1803.log
== TEST (2019-04-08 20:01:08) 
-- CODE:
a = int(input("digite o numero: "))
b = n//1000
c = n//100 - b*10
d = n//10 - (n/100)*10
e = n - (n/10)*10

n1 = a*5
n2 = b*4
n3 = c*3
n4 = d*2

nt = n1 + n2 + n3 + n4
print(nt % 11)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = n//1000
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:03:12) 
-- CODE:
a = int(input("digite o numero: "))
b = n//1000
c = n//100 - b*10
d = n//10 - (n//100)*10
e = n - (n//10)*10

n1 = a*5
n2 = b*4
n3 = c*3
n4 = d*2

nt = n1 + n2 + n3 + n4
print(nt % 11)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b = n//1000
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:03:48) 
-- CODE:
a = int(input("digite o numero: "))
b = a//1000
c = a//100 - b*10
d = a//10 - (n//100)*10
e = a - (n//10)*10

n1 = a*5
n2 = b*4
n3 = c*3
n4 = d*2

nt = n1 + n2 + n3 + n4
print(nt % 11)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    d = a//10 - (n//100)*10
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:04:10) 
-- CODE:
a = int(input("digite o numero: "))
b = a//1000
c = a//100 - b*10
d = a//10 - (a//100)*10
e = a - (a//10)*10

n1 = a*5
n2 = b*4
n3 = c*3
n4 = d*2

nt = n1 + n2 + n3 + n4
print(nt % 11)


-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:05:40) 
-- CODE:
a = int(input("digite o numero: "))
b = a//1000
c = a//100 - b*10
d = a//10 - (a//100)*10
e = a - (a//10)*10

n1 = b*5
n2 = c*4
n3 = d*3
n4 = e*2

nt = n1 + n2 + n3 + n4
print(nt % 11)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 20:05:58) 
-- CODE:
a = int(input("digite o numero: "))
b = a//1000
c = a//100 - b*10
d = a//10 - (a//100)*10
e = a - (a//10)*10

n1 = b*5
n2 = c*4
n3 = d*3
n4 = e*2

nt = n1 + n2 + n3 + n4
print(nt % 11)


-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 20:06:10) 
-- CODE:
a = int(input("digite o numero: "))
b = a//1000
c = a//100 - b*10
d = a//10 - (a//100)*10
e = a - (a//10)*10

n1 = b*5
n2 = c*4
n3 = d*3
n4 = e*2

nt = n1 + n2 + n3 + n4
print(nt % 11)


-- EXECUTION TIME:
0.11587
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
